--- a/major/src/main/resources/application.properties
+++ b/major/src/main/resources/application.properties
@@ -17,6 +17,11 @@ server.port=8080
 #banner
 spring.banner.charset=UTF-8
 
+#image size
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
+spring.servlet.multipart.enabled=true
+
 #thymeleaf
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.enabled=true
